Change styling to allow for blog titles of 2 lines length, restrict blog title to 50 characters to try and prevent 3+ line headings which would break the formatting

--- a/vanilladev/vanilladev/assets/css/styles.css
+++ b/vanilladev/vanilladev/assets/css/styles.css
@@ -242,7 +242,7 @@ a.nav-link:focus {
 }
 
 .blogpagination-nav {
-  margin-bottom: 2vh;
+  margin-bottom: 2em;
 }
 
 .feature > p {
@@ -276,5 +276,9 @@ a > i:hover {
 
 .tab-25 {
   width: 25%;
+}
+
+.two-line-heading {
+  height: 2.3em;
 }
 
